ueryBuilder + Manager fw classes + twig tests

--- a/app/config/parameters.yaml
+++ b/app/config/parameters.yaml
@@ -1,6 +1,6 @@
 database:
     mysql:
         dbHost: localhost
-        dbName: poo
+        dbName: blog2
         dbUser: root
         dbPw:   root
