Signup system + login + logout working + loggedUser infos in Controller can be get + roles

--- a/app/config/routes.yaml
+++ b/app/config/routes.yaml
@@ -11,6 +11,10 @@ routes:
         name: login
         path: /login
 
+    logout:
+        name: logout
+        path: /logout
+
     view one post by its id:
         name: viewPost
         path: /post/:id
